# sigio

./: .gitignore  CMakeLists.txt  ChangeLog  LICENSE  README.md
cmake/: VersionFromGit.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/: sigio.h
python/: CMakeLists.txt
python/sigio/: python_sigio.cpp  sigio.cpp
sources/: CMakeLists.txt  sigio.cpp  sigio_.cpp  sigio_.h
tests/: CMakeLists.txt  CMakeLists.txt.in  sigio-example-inotify.cpp  sigio-example.cpp  sigio-test.cpp  sigio-test.h
